tests/traits/traits.exp
Error: test.js:18
 18: ((new Foo).x: number); // error: Qux wins
      ^^^^^^^^^^^ Cannot cast property `x` to number because string [1] is incompatible with number [2].
  References:
   18: ((new Foo).x: number); // error: Qux wins
        ^^^^^^^^^^^ [1]: string
   18: ((new Foo).x: number); // error: Qux wins
                     ^^^^^^ [2]: number

Error: test.js:19
 19: ((new Foo).y: string); // error: Bar wins
      ^^^^^^^^^^^ Cannot cast property `y` to string because number [1] is incompatible with string [2].
  References:
   19: ((new Foo).y: string); // error: Bar wins
        ^^^^^^^^^^^ [1]: number
   19: ((new Foo).y: string); // error: Bar wins
                     ^^^^^^ [2]: string

Error: test.js:20
 20: ((new Foo).z: number); // error: Qux wins
      ^^^^^^^^^^^ Cannot cast property `z` to number because string [1] is incompatible with number [2].
  References:
   20: ((new Foo).z: number); // error: Qux wins
        ^^^^^^^^^^^ [1]: string
   20: ((new Foo).z: number); // error: Qux wins
                     ^^^^^^ [2]: number

Error: test2.js:2
  2: declare class C mixins I { }
                            ^ I. type referenced from value position
  1: declare interface I { }
                       ^ type I


Found 4 errors
